syntax = "proto3";// 协议为proto3

option go_package = ".;deliver";


// 定义发送请求信息
message SimpleRequest{
    // 定义发送的参数
    // 参数类型 参数名 标识号(不可重复)
    string data = 1;
}



message BarData {
    string Insid = 1;
    int64 Ts_open = 2;
    float Open_price = 3;
    float High_price = 4;
    float Low_price = 5;
    float Close_price = 6;
    float Vol = 7;
    float VolCcy = 8;
    float VolCcyQuote = 9;
    float Oi = 10;
    float OiCcy = 11;
    int64 Ts_oi = 12;
    float FundingRate = 13;
    float NextFundingRate = 14;
    int64 Ts_FundingRate = 15;
    int64 TS_NextFundingRate= 16;
}

message TickData{
    string Insid = 1;
    int64 Ts_Price = 2;
    float Ask1_price = 3;
    float Bid1_price = 4;
    float Ask1_volumn = 5;
    float Bid1_volumn = 6;
}

message Response{
    string response_me = 1;
}

// 定义bar消息接收对象
service BarDataRevicer{
    rpc BarDataRevicer(BarData) returns (Response){};
}

// 定义tick消息接收对象
service TickDataRevicer{
    rpc TickDataRevicer(TickData) returns (Response){};
}

